syntax = "proto3";

package model;

import "profile.proto";

option java_package = "org.oppia.android.app.model";
option java_multiple_files = true;

// Corresponds to intent extras of destination activity.
message DestinationScreen {
  oneof destination_screen {
    RecentlyPlayedActivityIntentExtras recently_played_activity_intent_extras = 1;
  }
}

// Intent extras for RecentlyPlayedActivity.
message RecentlyPlayedActivityIntentExtras {
  // The ID of current profile.
  ProfileId profile_id = 1;
}
